Css fix table and sidebar horizontal scroll

--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -3054,7 +3054,7 @@ License - nucleoapp.com/license/
 .table > thead > tr > td,
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
-  padding: 12px 7px;
+  padding: 8px 7px;
   vertical-align: middle; }
 
 .table .th-description {
